tests/const_assign_err.rox
const value = 5
var other = value
value = 10

